# reviewbot

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/reviewbot/: __init__.py  config.py  main.py  models.py
backend/src/reviewbot/analyzer/: __init__.py  ai_review.py  bugs.py  complexity.py  engine.py  security.py  style.py
backend/src/reviewbot/parsers/: github_pr.py  language.py
backend/src/reviewbot/utils/: __init__.py  scoring.py
backend/tests/: test_complexity.py  test_engine.py  test_security.py  test_style.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AIReviewPanel.tsx  CategoryPanel.tsx  CodeInput.tsx  Header.tsx  IssueList.tsx  LandingPage.tsx  LoadingState.tsx  PRInput.tsx  ReviewResults.tsx  ScoreCard.tsx  SuggestionList.tsx
frontend/src/hooks/: useAIReview.ts  useReview.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
